Added Dockerfile for backend